--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,6 @@ jobs:
         run: ./genbindings.sh ./ldk-c-bindings/ "-I/usr/lib/jvm/java-11-openjdk-amd64/include/ -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/" false false
       - name: Check latest headers are in git
         run: |
+          # For some reason the debug library is not deterministic, this may be fixed in a future rustc
           git checkout liblightningjni_debug.so
-          git checkout liblightningjni_release.so
           git diff --exit-code
