--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
     container: debian:bullseye
     env:
       TOOLCHAIN: stable
+    strategy:
+      fail-fast: false
     steps:
       - name: Install native Rust toolchain, Valgrind, and build utilitis
         run: |
@@ -118,6 +120,8 @@ jobs:
     container: debian:bullseye
     env:
       TOOLCHAIN: stable
+    strategy:
+      fail-fast: false
     steps:
       - name: Install rust targets
         run: |
@@ -205,6 +209,7 @@ jobs:
         include:
           - platform: macos-10.15
           - platform: macos-11
+      fail-fast: false
     runs-on: ${{ matrix.platform }}
     env:
       TOOLCHAIN: stable
