[TS] Create .d.mts files by default

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "es2020",
     "sourceMap": true,
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
+    "stripInternal": true,
+
+    "allowSyntheticDefaultImports": false,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "strict": true,
