--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           cd ldk-c-bindings
           ./genbindings.sh ../rust-lightning false
-      - name: Build and Test TS Bindings for Node
+      - name: Build and Test TS Debug Bindings for Node
         run: |
           # We need FinalizationRegistry and top-level await support, which requires node 14.6/8,
           # however Debian ships with Node 12
@@ -51,21 +51,37 @@ jobs:
           curl https://nodejs.org/dist/v16.13.1/node-v16.13.1-linux-x64.tar.xz > nodejs.tar.xz
           tar xvvf nodejs.tar.xz
           export PATH=$(pwd)/$(echo node-*/bin):$PATH
-          ./genbindings.sh ./ldk-c-bindings/ wasm false false
-      - name: Build and Test TS Bindings for Web
+          ./genbindings.sh ./ldk-c-bindings/ wasm true false
+      - name: Build and Test TS Release Bindings for Node
         run: |
-          export PATH=$(echo node-*/bin):$PATH
-          ./genbindings.sh ./ldk-c-bindings/ wasm false true
+          export PATH=$(pwd)/$(echo node-*/bin):$PATH
+          ./genbindings.sh ./ldk-c-bindings/ wasm false false
+      - name: Install Playwright for Web Tests
+        run: |
           export HOME=/root/ # Github actions is apparently broken
-          npm i -D playwright
+          export PATH=$(pwd)/$(echo node-*/bin):$PATH
           # npx playwright install-deps is broken so we do it manually, see https://github.com/microsoft/playwright/issues/11165
           apt-get install -y --no-install-recommends fonts-liberation libenchant-2-2 libicu67 libjpeg62-turbo libasound2 libatk-bridge2.0-0 libatk1.0-0 libatspi2.0-0 libcairo2 libcups2 libdbus-1-3 libdrm2 libegl1 libgbm1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxdamage1 libxext6 libxfixes3 libxrandr2 libxshmfence1 xvfb fonts-noto-color-emoji fonts-unifont libfontconfig libfreetype6 xfonts-scalable fonts-ipafont-gothic fonts-wqy-zenhei fonts-tlwg-loma-otf ffmpeg libcairo-gobject2 libdbus-glib-1-2 libfontconfig1 libgdk-pixbuf2.0-0 libpangocairo-1.0-0 libpangoft2-1.0-0 libxcb-shm0 libxcursor1 libxi6 libxrender1 libxt6 gstreamer1.0-libav gstreamer1.0-plugins-bad gstreamer1.0-plugins-base gstreamer1.0-plugins-good libepoxy0 libevdev2 libgl1 libgles2 libgstreamer-gl1.0-0 libgstreamer1.0-0 libharfbuzz-icu0 libharfbuzz0b libhyphen0 libnotify4 libopenjp2-7 libopus0 libpng16-16 libsecret-1-0 libsoup2.4-1 libwayland-client0 libwayland-egl1 libwayland-server0 libwebp6 libwebpdemux2 libwoff1 libxkbcommon0 libxml2 libxslt1.1
           mkdir -p $HOME/.cache/ms-playwright # `playwright install` is too dumb to create this for us
           chmod -R 777 $HOME/
+          npm i -D playwright
           npx playwright install
+      - name: Build and Test TS Debug Bindings for Web
+        run: |
+          export HOME=/root/ # Github actions is apparently broken
           export PATH=$(pwd)/$(echo node-*/bin):$PATH
+          ./genbindings.sh ./ldk-c-bindings/ wasm true true
           cd ts
+          rm liblightningjs.wasm && ln -s $(pwd)/../liblightningjs_debug.wasm ./liblightningjs.wasm
           python3 -m http.server &
+          node test/browser.mjs
+      - name: Build and Test TS Release Bindings for Web
+        run: |
+          export HOME=/root/ # Github actions is apparently broken
+          export PATH=$(pwd)/$(echo node-*/bin):$PATH
+          ./genbindings.sh ./ldk-c-bindings/ wasm false true
+          cd ts
+          rm liblightningjs.wasm && ln -s $(pwd)/../liblightningjs_release.wasm ./liblightningjs.wasm
           node test/browser.mjs
       - name: Check latest TS files are in git
         run: |
